// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tax calculateDeduction should calculate minimum deduction on a income of -1000 which is below min threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -59750,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 0 which is below min threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -58750,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 1000 which is below min threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -57750,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 3999 which is below min threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -54751,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 4000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -54750,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 5000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -53750,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 9000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -49800,
  "minimumDeduction": 4050,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 40000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -32750,
  "minimumDeduction": 18000,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 80000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -10750,
  "minimumDeduction": 36000,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 97610 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -1064,
  "minimumDeduction": 43924,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 100000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 250,
  "minimumDeduction": 45000,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 169000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 38200,
  "minimumDeduction": 76050,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 170000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 38750,
  "minimumDeduction": 76500,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 237900 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 85540,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 240000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 87640,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 598050 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 445690,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 600000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 447640,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 962050 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 809690,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 999999 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 847639,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
}
`;

exports[`tax calculateIncomeTax should calculate income tax on a income of -1000 1`] = `-230`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 0 1`] = `0`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 1000 1`] = `230`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 3999 1`] = `919`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 4000 1`] = `920`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 5000 1`] = `1150`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 9000 1`] = `2070`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 40000 1`] = `9200`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 80000 1`] = `18400`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 97610 1`] = `22450`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 100000 1`] = `23000`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 169000 1`] = `38870`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 170000 1`] = `39100`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 237900 1`] = `54717`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 240000 1`] = `55200`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 598050 1`] = `137551`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 600000 1`] = `138000`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 962050 1`] = `221271`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 999999 1`] = `229999`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of -1000 1`] = `-82`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 0 1`] = `0`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 1000 1`] = `82`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 3999 1`] = `327`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 4000 1`] = `328`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 5000 1`] = `410`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 9000 1`] = `738`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 40000 1`] = `3280`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 80000 1`] = `6560`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 97610 1`] = `8004`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 100000 1`] = `8199`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 169000 1`] = `13857`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 170000 1`] = `13939`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 237900 1`] = `19507`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 240000 1`] = `19679`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 598050 1`] = `49040`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 600000 1`] = `49200`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 962050 1`] = `78888`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 999999 1`] = `81999`;

exports[`tax calculateStep1 should calculate step one tax on a income of -1000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 0 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 1000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 3999 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 4000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 5000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 9000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 40000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 80000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 97610 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 100000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 169000 which is above step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 170000 which is above step one tax 1`] = `14`;

exports[`tax calculateStep1 should calculate step one tax on a income of 237900 which is above step one tax 1`] = `964`;

exports[`tax calculateStep1 should calculate step one tax on a income of 240000 which is above step one tax 1`] = `964`;

exports[`tax calculateStep1 should calculate step one tax on a income of 598050 which is above step one tax 1`] = `964`;

exports[`tax calculateStep1 should calculate step one tax on a income of 600000 which is above step one tax 1`] = `964`;

exports[`tax calculateStep1 should calculate step one tax on a income of 962050 which is above step one tax 1`] = `964`;

exports[`tax calculateStep1 should calculate step one tax on a income of 999999 which is above step one tax 1`] = `964`;

exports[`tax calculateStep2 should calculate step two tax on a income of -1000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 0 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 1000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 3999 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 4000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 5000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 9000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 40000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 80000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 97610 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 100000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 169000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 170000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 237900 which is above step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 240000 which is above step two tax 1`] = `69`;

exports[`tax calculateStep2 should calculate step two tax on a income of 598050 which is above step two tax 1`] = `11884`;

exports[`tax calculateStep2 should calculate step two tax on a income of 600000 which is above step two tax 1`] = `11884`;

exports[`tax calculateStep2 should calculate step two tax on a income of 962050 which is above step two tax 1`] = `11884`;

exports[`tax calculateStep2 should calculate step two tax on a income of 999999 which is above step two tax 1`] = `11884`;

exports[`tax calculateStep3 should calculate step three tax on a income of -1000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 0 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 1000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 3999 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 4000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 5000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 9000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 40000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 80000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 97610 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 100000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 169000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 170000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 237900 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 240000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 598050 which is above step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 600000 which is above step three tax 1`] = `241`;

exports[`tax calculateStep3 should calculate step three tax on a income of 962050 which is above step three tax 1`] = `45136`;

exports[`tax calculateStep3 should calculate step three tax on a income of 999999 which is above step three tax 1`] = `45136`;

exports[`tax calculateStep4 should calculate step four tax on a income of -1000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 0 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 1000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 3999 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 4000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 5000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 9000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 40000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 80000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 97610 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 100000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 169000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 170000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 237900 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 240000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 598050 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 600000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 962050 which is above step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 999999 which is above step four tax 1`] = `5844`;

exports[`tax getDividendsTaxCalculations should match snapshot 1`] = `
Object {
  "afterDividendsTax": 53446,
  "dividends": 77000,
  "dividendsTax": 23554,
  "surplus": 100000,
  "surplusTax": 23000,
  "upwardsAdjustment": 102410,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of -1000 which is below min threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 12825,
  "commonIncome": -59750,
  "income": -1000,
  "incomeTax": -13743,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
  "socialSecurityDeduction": -82,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": -13825,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 0 which is below min threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 13513,
  "commonIncome": -58750,
  "income": 0,
  "incomeTax": -13513,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 0,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": -13513,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 1000 which is below min threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 14201,
  "commonIncome": -57750,
  "income": 1000,
  "incomeTax": -13283,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 82,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": -13201,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 3999 which is below min threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 16265,
  "commonIncome": -54751,
  "income": 3999,
  "incomeTax": -12593,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 327,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": -12266,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 4000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 16265,
  "commonIncome": -54750,
  "income": 4000,
  "incomeTax": -12593,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 328,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": -12265,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 5000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 16953,
  "commonIncome": -53750,
  "income": 5000,
  "incomeTax": -12363,
  "minimumDeduction": 4000,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 410,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": -11953,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 9000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 19716,
  "commonIncome": -49800,
  "income": 9000,
  "incomeTax": -11454,
  "minimumDeduction": 4050,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 738,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": -10716,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 40000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 44253,
  "commonIncome": -32750,
  "income": 40000,
  "incomeTax": -7533,
  "minimumDeduction": 18000,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 3280,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": -4253,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 80000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 75913,
  "commonIncome": -10750,
  "income": 80000,
  "incomeTax": -2473,
  "minimumDeduction": 36000,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 6560,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": 4087,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 97610 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 89851,
  "commonIncome": -1064,
  "income": 97610,
  "incomeTax": -245,
  "minimumDeduction": 43924,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 8004,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": 7759,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 100000 which is above max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 91744,
  "commonIncome": 250,
  "income": 100000,
  "incomeTax": 57,
  "minimumDeduction": 45000,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 8199,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": 8256,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 169000 which is above max threshold for minimum deduction, above step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 146357,
  "commonIncome": 38200,
  "income": 169000,
  "incomeTax": 8786,
  "minimumDeduction": 76050,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 13857,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": 22643,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 170000 which is above max threshold for minimum deduction, above step one tax, below step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 147135,
  "commonIncome": 38750,
  "income": 170000,
  "incomeTax": 8912,
  "minimumDeduction": 76500,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 13939,
  "step1": 14,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": 22865,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 237900 which is above max threshold for minimum deduction, above step one tax, above step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 197755,
  "commonIncome": 85540,
  "income": 237900,
  "incomeTax": 19674,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 19507,
  "step1": 964,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "totalTax": 40145,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 240000 which is above max threshold for minimum deduction, above step one tax, above step two tax, below step three tax, below step four tax 1`] = `
Object {
  "afterTax": 199131,
  "commonIncome": 87640,
  "income": 240000,
  "incomeTax": 20157,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 19679,
  "step1": 964,
  "step2": 69,
  "step3": 0,
  "step4": 0,
  "totalTax": 40869,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 598050 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, below step four tax 1`] = `
Object {
  "afterTax": 433654,
  "commonIncome": 445690,
  "income": 598050,
  "incomeTax": 102508,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 49040,
  "step1": 964,
  "step2": 11884,
  "step3": 0,
  "step4": 0,
  "totalTax": 164396,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 600000 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, below step four tax 1`] = `
Object {
  "afterTax": 434754,
  "commonIncome": 447640,
  "income": 600000,
  "incomeTax": 102957,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 49200,
  "step1": 964,
  "step2": 11884,
  "step3": 241,
  "step4": 0,
  "totalTax": 165246,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 962050 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, above step four tax 1`] = `
Object {
  "afterTax": 638950,
  "commonIncome": 809690,
  "income": 962050,
  "incomeTax": 186228,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 78888,
  "step1": 964,
  "step2": 11884,
  "step3": 45136,
  "step4": 0,
  "totalTax": 323100,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 999999 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, above step four tax 1`] = `
Object {
  "afterTax": 659216,
  "commonIncome": 847639,
  "income": 999999,
  "incomeTax": 194956,
  "minimumDeduction": 97610,
  "personalAllowance": 54750,
  "socialSecurityDeduction": 81999,
  "step1": 964,
  "step2": 11884,
  "step3": 45136,
  "step4": 5844,
  "totalTax": 340783,
}
`;
